<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Alexander Meza</string>
    <string name="telefono">5555555</string>
    <string name="email">programador@gmail.com</string>
    <string name="pImagen">Imagen</string>
    <string name="pNombre">Nombre</string>
    <string name="pCalificacion">Última Calificación</string>
    <string name="pCorreo">Correo</string>
    <string name="pMensaje">Mensaje</string>
    <string name="pTelefono">Teléfono</string>
    <string name="plikes">0 Likes</string>

    <string name="tituloBiografia">Biografia del Programador</string>
    <string name="nombreBiografia">Alexander Meza</string>
    <string name="telefonoBiografia">3214807626</string>
    <string name="correoBiografia">programador@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
