<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_menu_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ameza.petagram.Correo.MenuContacto"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar"
        layout="@layout/layout_action_bar"
        ></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloBiografia"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">



                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextNombreEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:ems="10"
                        android:hint="@string/pNombre"
                        android:inputType="textPersonName"
                        android:text="@string/nombreBiografia" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/editTextTelefono"
                        android:hint="@string/pTelefono"
                        android:text="@string/telefonoBiografia"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/editTextCorreo"
                        android:hint="@string/pCorreo"
                        android:text="@string/correoBiografia"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
