<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ameza.petagram.Correo.MenuContacto"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar"
        layout="@layout/layout_action_bar"
        ></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Formulario de Contácto"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextNombreEmail"
                android:hint="@string/pNombre" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextCorreo"
                android:hint="@string/pCorreo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamano_imagen_mascota">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamano_imagen_mascota"
                android:inputType="textMultiLine"
                android:ems="50"
                android:hint="@string/pMensaje"
                android:id="@+id/editTextMensaje" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

        <Button
            android:id="@+id/btnContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enviar Comentario"
            android:theme="@style/MiBotonRaised"
            />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
